--- a/app/src/main/res/layout/activity_zgjm_.xml
+++ b/app/src/main/res/layout/activity_zgjm_.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.Zgjm_Activity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/zgjmbgm">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,28 +16,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="请输入关键词"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#ccff00"
+            android:textColor="#ccff00"/>
         <Button
             android:id="@+id/btn_zgjm_jm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="解梦"/>
+            android:text="解梦"
+            android:textColor="#ff66cc"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="15dp">
-        <Spinner
-            android:id="@+id/spnr_zgjm_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_point"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#00CD00"
+                android:text="点击☞"
+                />
+            <Spinner
+                android:id="@+id/spnr_zgjm_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:textColor="#3300FF"
+            android:textColor="#DDDD22"
+
             />
         <ScrollView
             android:layout_width="match_parent"
@@ -46,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:textColor="#00CD00"
                 />
         </ScrollView>
 
